--- a/src/etc_nginx_nginx.conf
+++ b/src/etc_nginx_nginx.conf
@@ -21,7 +21,7 @@ http {
 	types_hash_max_size 2048;
 	# server_tokens off;
 
-#disable_symlinks off;
+	disable_symlinks off;
 
 	# server_names_hash_bucket_size 64;
 	# server_name_in_redirect off;
@@ -71,17 +71,17 @@ http {
 #mail {
 #	# See sample authentication script at:
 #	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
+#
 #	# auth_http localhost/auth.php;
 #	# pop3_capabilities "TOP" "USER";
 #	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
+#
 #	server {
 #		listen     localhost:110;
 #		protocol   pop3;
 #		proxy      on;
 #	}
-# 
+#
 #	server {
 #		listen     localhost:143;
 #		protocol   imap;
