--- a/src/etc_nginx_nginx.conf
+++ b/src/etc_nginx_nginx.conf
@@ -19,7 +19,7 @@ http {
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
+	server_tokens off;
 
 	disable_symlinks off;
 
