--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -24,3 +24,15 @@ services:
       - PGRST_SERVER_HOST=localhost
       - PGRST_SERVER_PORT=3106
       - PGRST_OPENAPI_SERVER_PROXY_URI=https://api.test.afa.codes
+  pgrestcep:
+    image: postgrest/postgrest:latest
+    restart: unless-stopped
+    network_mode: host
+    environment:
+      - RACK_ENV=development
+      - PGRST_DB_URI=postgres://postgres@localhost/cepdb
+      - PGRST_DB_ANON_ROLE=webanon
+      - PGRST_DB_SCHEMA=api
+      - PGRST_SERVER_HOST=localhost
+      - PGRST_SERVER_PORT=3107
+      - PGRST_OPENAPI_SERVER_PROXY_URI=https://api.cep.afa.codes
